--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/style.css">
     <script src="https://kit.fontawesome.com/7f4f0e4fb2.js" crossorigin="anonymous"></script>
     <title>Exercise-189</title>
 </head>
